tests/should-fail/crashes/shouldnt-crash-11.j
function a takes nothing returns integer
	if true then
		return 0
	elseif false then
	else
		return local a arraydfunction
